--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.4",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -30,6 +32,8 @@
     "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "^6.19.0",
     "axios": "^1.13.2",
+    "cache-manager": "^7.2.5",
+    "cacheable": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "express-basic-auth": "^1.2.1",
